crates/swc_ecma_parser/tests/flow/type_guards/invalid/implies_as_type_guard_param.js
type T = (implies_: mixed) => implies implies is number;
